test/tests/stages/9_functions/valid/libraries/addition_client.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: add
        List[2]: 
          TIdentifier: x
          TIdentifier: y
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[2]: 
            Int: 
            Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: add
                  List[2]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
